--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -32,5 +32,8 @@
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
+    <div>
+        dont have account ?  <a href="{{ path('app_register') }}">register here</a>
+    </div>
 </form>
 {% endblock %}
