--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        {{ encore_entry_link_tags('base') }}
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+        {% if app.user %}
+        <div class="mb-3 w-50 mx-auto text-center">
+            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+        </div>
+    {% endif %}
+    {{ encore_entry_script_tags('base') }}
     </body>
 </html>
