--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,9 +11,12 @@
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
+        {{ form_row(registrationForm.Meno) }}
+        {{ form_row(registrationForm.Priezvisko) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
+        {{ form_row(registrationForm.Car)}}
         {{ form_row(registrationForm.agreeTerms) }}
 
         <button type="submit" class="btn">Register</button>
