started creating route

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,16 +17,10 @@
             <div id="main-nav" class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">item <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{{ path('index') }}">index</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">item2</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">item3 </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">itt</a>
+                        <a class="nav-link" href="{{ path('route') }}">route</a>
                     </li>
                 </ul>
             </div>
