--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,6 +2,7 @@
 
 {% block title %}Register{% endblock %}
 
+{% form_theme registrationForm 'bootstrap_4_layout.html.twig' %}
 {% block body %}
     {% for flashError in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
@@ -14,7 +15,7 @@
         {{ form_row(registrationForm.Meno) }}
         {{ form_row(registrationForm.Priezvisko) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Heslo'
         }) }}
         {{form_row(registrationForm.profilePicture)}}
         {{ form_row(registrationForm.Car)}}
