--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
             <a class="navbar-brand">
-                <img src="/img/logo.svg" alt="" width="40" height="24" class="d-inline-block align-top m-1">
+                <img src="{{asset('build/img/logo.svg')}}" alt="" width="40" height="24" class="d-inline-block align-top m-1">
             </a>
             <button class="navbar-toggler" data-target="#main-nav" data-toggle="collapse" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
