--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,13 +8,13 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-            <a class="navbar-brand">
+            <a class="navbar-brand m-2">
                 <img src="{{asset('build/img/logo.svg')}}" alt="" width="40" height="24" class="d-inline-block align-top m-1">
             </a>
-            <button class="navbar-toggler" data-target="#main-nav" data-toggle="collapse" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler m-2" data-target="#main-nav" data-toggle="collapse" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div id="main-nav" class="collapse navbar-collapse">
+            <div id="main-nav" class="collapse navbar-collapse m-2">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="{{ path('index') }}">index</span></a>
