--- a/templates/route/index.html.twig
+++ b/templates/route/index.html.twig
@@ -3,22 +3,8 @@
 {% block title %}Hello RouteController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    <div id="mapid" style="height: 50vh">
+<div id="app">
     
-    </div>
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/max/SOC/2020-SOC-WEBAPP/src/Controller/RouteController.php'|file_link(0) }}">src/Controller/RouteController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/max/SOC/2020-SOC-WEBAPP/templates/route/index.html.twig'|file_link(0) }}">templates/route/index.html.twig</a></code></li>
-    </ul>
 </div>
 {% endblock %}
 
