--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,6 +14,7 @@
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.Meno) }}
         {{ form_row(registrationForm.Priezvisko) }}
+        {{ form_row(registrationForm.about) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Heslo'
         }) }}
@@ -22,6 +23,6 @@
         {{ form_row(registrationForm.CarDescription)}}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn btn-primary">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
