--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,13 @@
 @import "custom";
 @import "~bootstrap/scss/bootstrap";
 
+.unselectable {
+	-webkit-user-select: none; /* Safari */        
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+/Edge */
+	user-select: none; /* Standard */
+}
+
 .fc-bg-event {
 	--fc-bg-event-opacity: 0.7; //background event color
 }
