--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -11,3 +11,7 @@
 .fc-bg-event {
 	--fc-bg-event-opacity: 0.7; //background event color
 }
+
+.navbar-dark .navbar-nav .nav-link {
+    color: rgb(255, 255, 255);
+}
