--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,17 +11,21 @@
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
+        {{ form_row(registrationForm.email)}}
         {{ form_row(registrationForm.Meno) }}
         {{ form_row(registrationForm.Priezvisko) }}
         {{ form_row(registrationForm.about) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Heslo'
         }) }}
-        {{form_row(registrationForm.profilePicture)}}
+        {{form_row(registrationForm.profilePicture, {
+            label: 'Profilový obrázok'
+        })}}
         {{ form_row(registrationForm.Car)}}
         {{ form_row(registrationForm.CarDescription)}}
-        {{ form_row(registrationForm.agreeTerms) }}
+        {{ form_row(registrationForm.agreeTerms, {
+            label: 'Súhlasim s podmienkami používania'
+        }) }}
 
         <button type="submit" class="btn btn-primary">Register</button>
     {{ form_end(registrationForm) }}
