Changed TODOs Added ability to cancel route

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,8 +26,8 @@
             <div id="main-nav" class="collapse navbar-collapse mx-2 fw-bold">
                 <ul class="navbar-nav ml-auto">
                     {% if app.user %}
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{{ path('index') }}">KALENDÁR</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('index') }}">KALENDÁR</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('route') }}">PRIDAŤ JAZDU</a>
