--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,7 +19,7 @@
     >
     <div class="checkbox mb-3">
         <label>
-            <input type="checkbox" name="_remember_me"> Zapametať si ma
+            <input type="checkbox" name="_remember_me"> Zapamätať si ma
         </label>
     </div>
 
