--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -24,7 +24,7 @@
         {{ form_row(registrationForm.Car)}}
         {{ form_row(registrationForm.CarDescription)}}
         {{ form_row(registrationForm.agreeTerms, {
-            label: 'Súhlasim s podmienkami používania'
+            label: 'Súhlasim so spracovanim osobných údajov'
         }) }}
 
         <button type="submit" class="btn btn-primary">Register</button>
