grammar, small changes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Cestujme Spoločne{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         {{ encore_entry_link_tags('base') }}
         {% block stylesheets %}{% endblock %}
@@ -56,7 +56,7 @@
                 {% endif %}
             </div>
         </nav>
-        <div class="container text-center mt-1">
+        <div class="container text-center mt-3">
             {% block body %}{% endblock %}
         </div>
         {% block javascripts %}{% endblock %}
