--- a/templates/route/index.html.twig
+++ b/templates/route/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello RouteController!{% endblock %}
+{% block title %}Zoznam Jázd{% endblock %}
 
 {% block body %}
 <img src="{{asset('build/img/logo.svg')}}" alt="logo" style="max-height: 10vh; max-width: 100%;" class="m-1">
