--- a/templates/route/list.html.twig
+++ b/templates/route/list.html.twig
@@ -2,37 +2,60 @@
 
 {% block body %}
 {% for row in routes %}
-<div class="border border-primary border-2 m-1" id="{{row.id}}"
-	 {# TODO: Modal instead of redirect #}
-	 {% if row.driver.id == app.user.id %} onclick="window.location.href = ` {{path( 'route_info' , {id: row.id}) }} `;" {% endif %}
->
-	Voľné miesta: {{row.seats}} <br>
-	Vodič:
-	{% if row.driver.id == app.user.id %}
-		JA
-	{% else %}
-		<a href="{{path('profile_param', {id: row.driver.id})}}">{{row.driver.meno}}  {{row.driver.priezvisko}}</a>
-	{% endif %}
-	<br>
-	Čas: {{row.time.format("d.m.Y H:i")}} Opakovanie: 
-	{% if row.repeat==3 %}
-		Denne
-	{% elseif row.repeat==2 %}
-		Pracovné dni
-	{% elseif row.repeat==1 %}
-		Týždeňne
-	{% else %}
-		Nikdy
-	{% endif %}
-	<br>
-	{% if joinRoute %}
-		<a href="{{path('route_join', {id: row.id})}}">Pridaj sa</a>
-	{% else %}
-		<a href="{{path('route_cancel', {id: row.id})}}" class="text-danger">Zruš jazdu</a>
-	{% endif %}
-	<!--
-	TODO: ADD Cancel route
-	-->
+<div class="border border-3 border-primary border-2 container rounded p-0 m-1" id="{{row.id}}" {# TODO: Modal instead of redirect #}>
+	<div class="text-white bg-primary text-left px-3">
+		{% set value = row.time.format("D") %}
+		{% if value == 'Mon' %}
+		Pondelok
+		{% elseif value == 'Tue' %}
+		Utorok
+		{% elseif value == 'Wed' %}
+		Streda
+		{% elseif value == 'Thu' %}
+		Štvrtok
+		{% elseif value == 'Fri' %}
+		Piatok
+		{% elseif value == 'Sat' %}
+		Sobota
+		{% elseif value == 'Sun' %}
+		Nedeľa
+		{% endif %}
+		{{row.time.format("d.m.Y H:i")}}
+	</div>
+	<div class="row align-items-center">
+		<div class="col-md-10">
+			Voľné miesta: {{row.seats}} <br>
+			Vodič:
+			{% if row.driver.id == app.user.id %}
+				JA
+			{% else %}
+				<a href="{{path('profile_param', {id: row.driver.id})}}">{{row.driver.meno}}  {{row.driver.priezvisko}}</a>
+			{% endif %}
+			<br>
+			Opakovanie: 
+			{% if row.repeat==3 %}
+				Denne
+			{% elseif row.repeat==2 %}
+				Pracovné dni
+			{% elseif row.repeat==1 %}
+				Týždeňne 
+			{% else %}
+				Nikdy
+			{% endif %}
+			<br>
+			{% if joinRoute %}
+				<a href="{{path('route_join', {id: row.id})}}">Pridaj sa</a>
+			{% else %}
+				<a href="{{path('route_cancel', {id: row.id})}}" class="text-danger">Zruš jazdu</a>
+			{% endif %}
+			<!--
+			TODO: ADD Cancel route
+			-->
+		</div>
+		<div class="col-md-2">
+			<button class="btn btn-primary" {% if row.driver.id == app.user.id %} onclick="window.location.href = ` {{path( 'route_info' , {id: row.id}) }} `;" {% endif %}>Info</button>
+		</div>
+	</div>
 </div>
 {% endfor %}
 {% endblock %}
